--- a/src/app/auth/pages/login/login.page.html
+++ b/src/app/auth/pages/login/login.page.html
@@ -1,9 +1,23 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content padding>
+  <h1 text-center>
+    <ion-icon name="done-all" color="primary" class="icon-7em"></ion-icon>
+  </h1>
 
-<ion-content>
+  <ion-item>
+    <ion-icon name="mail" color="primary" slot="start"></ion-icon>   
+    <ion-input type="email" placeholder="E-mail" inputmode="email" autofocus="true"></ion-input> 
+  </ion-item>
+
+  <ion-item>
+    <ion-icon name="lock" color="primary" slot="start"></ion-icon>
+    <ion-input type="password" placeholder="Password"></ion-input> 
+  </ion-item>  
+
+  <ion-button expand="block">Login</ion-button>
+  <ion-button expand="block" fill="clear">Create Account</ion-button>
+  <ion-button expand="block">
+    <ion-icon slot="start" name="logo-facebook"></ion-icon>
+    Login With Facebook
+  </ion-button>
 
 </ion-content>
